# sherlock-ai

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  constants.py  full_function_tree.txt  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
src/sherlock_ai/: __init__.py  logging_config.py  logging_setup.py  performance.py
src/sherlock_ai/auto/: __init__.py  framework_patcher.py
src/sherlock_ai/config/: __init__.py  logging.py  settings.py
src/sherlock_ai/monitoring/: __init__.py  error_insights.py
src/sherlock_ai/providers/: azure_openai_provider.py  factory.py  groq_provider.py
src/sherlock_ai/storage/: api_client.py  groq_manager.py  mongo_manager.py
tests/: conftest.py  function_source.txt  test_fastapi.py  test_local.py  test_script.py
tests/integration/: test_fastapi_routes.py  test_sherlock_setup.py
tests/unit/: test_config.py  test_hardcoded_detector.py  test_monitoring_decorators.py  test_performance.py  test_request_context.py
